# ShortGPT

./: .gitignore  pyproject.toml
short_gpt/: calibration.py  short_embedding.ipynb  short_embedding.py
